--- a/David/CSS_Assignment/index.html
+++ b/David/CSS_Assignment/index.html
@@ -5,6 +5,92 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Assignment</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="nav">
+      <ol>
+        <li>Home</li>
+        <li>About</li>
+        <li>Service</li>
+        <li>Contact</li>
+      </ol>
+    </div>
+    <header>
+      <h1>We provide the best IT Services</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
+        repudiandae nam laborum blanditiis veritatis officia aspernatur vero
+        labore suscipit incidunt natus, nesciunt totam distinctio odit
+        reprehenderit esse! Culpa, accusamus obcaecati.
+        <a href="#">Know more...</a>
+      </p>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
+          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
+          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
+          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
+          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
+          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
+          aperiam asperiores, praesentium tempora inventore! Error eum quasi
+          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
+          tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
+          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
+          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
+          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
+          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
+          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
+          aperiam asperiores, praesentium tempora inventore! Error eum quasi
+          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
+          tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
+          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
+          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
+          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
+          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
+          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
+          aperiam asperiores, praesentium tempora inventore! Error eum quasi
+          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
+          tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </div>
+    </header>
+    <footer>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+      <ul>
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Vmeo</li>
+      </ul>
+    </footer>
+  </body>
 </html>
