--- a/David/CSS_Assignment/index.html
+++ b/David/CSS_Assignment/index.html
@@ -8,89 +8,99 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="nav">
-      <ol>
-        <li>Home</li>
-        <li>About</li>
-        <li>Service</li>
-        <li>Contact</li>
-      </ol>
+    <div class="top-div">
+      <nav class="top-nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </div>
     <header>
-      <h1>We provide the best IT Services</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
-        repudiandae nam laborum blanditiis veritatis officia aspernatur vero
-        labore suscipit incidunt natus, nesciunt totam distinctio odit
-        reprehenderit esse! Culpa, accusamus obcaecati.
-        <a href="#">Know more...</a>
-      </p>
-      <div>
+      <div class="header-content">
+        <h1>We provide the best IT Services</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
-          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
-          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
-          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
-          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
-          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
-          aperiam asperiores, praesentium tempora inventore! Error eum quasi
-          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
-          tempore quidem accusamus repudiandae pariatur quod nulla minima
-          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
-          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
-          animi, inventore dolore magni assumenda delectus, quisquam excepturi
-          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
-          Aspernatur et eos ut ipsum quod architecto id odit.
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
-          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
-          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
-          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
-          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
-          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
-          aperiam asperiores, praesentium tempora inventore! Error eum quasi
-          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
-          tempore quidem accusamus repudiandae pariatur quod nulla minima
-          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
-          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
-          animi, inventore dolore magni assumenda delectus, quisquam excepturi
-          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
-          Aspernatur et eos ut ipsum quod architecto id odit.
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque
-          voluptatem voluptate, quasi et quidem dolorem. Similique obcaecati
-          ipsum cupiditate ab minus, fuga magni vel eius saepe error omnis
-          officia tenetur. Ut, maiores dolorem ullam reprehenderit repudiandae
-          aperiam neque deserunt culpa quasi distinctio consequatur? Quis fugiat
-          maiores tempore iste ipsam possimus nulla sequi pariatur, saepe quae
-          aperiam asperiores, praesentium tempora inventore! Error eum quasi
-          consequuntur nesciunt dolorem aliquid qui quam vitae et vel optio
-          tempore quidem accusamus repudiandae pariatur quod nulla minima
-          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
-          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
-          animi, inventore dolore magni assumenda delectus, quisquam excepturi
-          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
-          Aspernatur et eos ut ipsum quod architecto id odit.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
+          repudiandae nam laborum blanditiis veritatis officia aspernatur vero
+          labore suscipit incidunt natus, nesciunt totam distinctio odit
+          reprehenderit esse! Culpa, accusamus obcaecati.
+          <a href="#">Know more...</a>
         </p>
       </div>
     </header>
+    <div class="sections">
+      <section class="section1">
+        <p>
+          Section 1 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Atque voluptatem voluptate, quasi et quidem dolorem. Similique
+          obcaecati ipsum cupiditate ab minus, fuga magni vel eius saepe error
+          omnis officia tenetur. Ut, maiores dolorem ullam reprehenderit
+          repudiandae aperiam neque deserunt culpa quasi distinctio consequatur?
+          Quis fugiat maiores tempore iste ipsam possimus nulla sequi pariatur,
+          saepe quae aperiam asperiores, praesentium tempora inventore! Error
+          eum quasi consequuntur nesciunt dolorem aliquid qui quam vitae et vel
+          optio tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </section>
+      <section class="section2">
+        <p>
+          Section 2 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Atque voluptatem voluptate, quasi et quidem dolorem. Similique
+          obcaecati ipsum cupiditate ab minus, fuga magni vel eius saepe error
+          omnis officia tenetur. Ut, maiores dolorem ullam reprehenderit
+          repudiandae aperiam neque deserunt culpa quasi distinctio consequatur?
+          Quis fugiat maiores tempore iste ipsam possimus nulla sequi pariatur,
+          saepe quae aperiam asperiores, praesentium tempora inventore! Error
+          eum quasi consequuntur nesciunt dolorem aliquid qui quam vitae et vel
+          optio tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </section>
+      <section class="section3">
+        <p>
+          Section 3 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Atque voluptatem voluptate, quasi et quidem dolorem. Similique
+          obcaecati ipsum cupiditate ab minus, fuga magni vel eius saepe error
+          omnis officia tenetur. Ut, maiores dolorem ullam reprehenderit
+          repudiandae aperiam neque deserunt culpa quasi distinctio consequatur?
+          Quis fugiat maiores tempore iste ipsam possimus nulla sequi pariatur,
+          saepe quae aperiam asperiores, praesentium tempora inventore! Error
+          eum quasi consequuntur nesciunt dolorem aliquid qui quam vitae et vel
+          optio tempore quidem accusamus repudiandae pariatur quod nulla minima
+          explicabo, eligendi architecto? Tenetur suscipit eveniet cumque
+          deleniti nulla! Corrupti ipsam natus quasi fugiat officia expedita
+          animi, inventore dolore magni assumenda delectus, quisquam excepturi
+          necessitatibus, deleniti saepe asperiores nostrum perspiciatis.
+          Aspernatur et eos ut ipsum quod architecto id odit.
+        </p>
+      </section>
+    </div>
     <footer>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-      </ul>
-      <ul>
-        <li>Facebook</li>
-        <li>Twitter</li>
-        <li>Vmeo</li>
-      </ul>
+      <div class="footer-content">
+        <nav>
+          <ul class="left-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul class="right-nav">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Vmeo</a></li>
+          </ul>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
