--- a/David/CSS_Assignment/index.html
+++ b/David/CSS_Assignment/index.html
@@ -30,7 +30,7 @@
         </p>
       </div>
     </header>
-    <div class="sections">
+    <div class="section-div">
       <section class="section1">
         <p>
           Section 1 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
