added blog studs

--- a/PersonalBlog/index.html
+++ b/PersonalBlog/index.html
@@ -22,7 +22,6 @@
       <nav class="top-nav">
         <h1 class="blog-name">Ayodele's Corner</h1>
         <ul>
-          <li></li>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
@@ -31,17 +30,219 @@
       </nav>
     </div>
     <main>
+      <h1 class="welcome">
+        Welcome to <span class="blog-name">Ayodele's Corner</span>.
+      </h1>
+      <p class="welcome-text">Pick a blog for your reading pleasure.</p>
       <div class="blog-row">
-        <div class="blog-item"></div>
-        <div class="blog-item"></div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
       </div>
       <div class="blog-row">
-        <div class="blog-item"></div>
-        <div class="blog-item"></div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
       </div>
       <div class="blog-row">
-        <div class="blog-item"></div>
-        <div class="blog-item"></div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+      </div>
+      <div class="blog-row">
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+      </div>
+      <div class="blog-row">
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+      </div>
+      <div class="blog-row">
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+      </div>
+      <div class="blog-row">
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
+        <div class="blog-item">
+          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <p class="blog-date">Mar 19</p>
+          <p class="blog-preview">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
+            earum quibusdam voluptate reprehenderit dignissimos, quas ipsa,
+            deserunt incidunt debitis dicta quis pariatur quaerat harum
+            voluptatum modi quo tempore illum ipsum? Qui tenetur fugit
+            perspiciatis, delectus possimus quibusdam sequi cum fugiat debitis
+            saepe vero dicta odit non, nisi vel sint fuga quaerat! Aut
+            repudiandae debitis eaque dolor natus sint numquam maiores!
+          </p>
+          <a href="#">Continue reading</a>
+        </div>
       </div>
     </main>
 
