changed some titles

--- a/PersonalBlog/index.html
+++ b/PersonalBlog/index.html
@@ -50,7 +50,7 @@
           <a href="#">Continue reading</a>
         </div>
         <div class="blog-item">
-          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <h2 class="blog-title">Latest news on Covid Vaccine</h2>
           <p class="blog-date">Mar 19</p>
           <p class="blog-preview">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
@@ -66,7 +66,7 @@
       </div>
       <div class="blog-row">
         <div class="blog-item">
-          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <h2 class="blog-title">IRS begins payment of stimulus</h2>
           <p class="blog-date">Mar 19</p>
           <p class="blog-preview">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
@@ -80,7 +80,9 @@
           <a href="#">Continue reading</a>
         </div>
         <div class="blog-item">
-          <h2 class="blog-title">Antra welcomes new canditates</h2>
+          <h2 class="blog-title">
+            Latest render of the coming Apple Iphone 13
+          </h2>
           <p class="blog-date">Mar 19</p>
           <p class="blog-preview">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit,
