--- a/PersonalBlog/blogs/antra-blog.html
+++ b/PersonalBlog/blogs/antra-blog.html
@@ -48,7 +48,9 @@
       </blog-heading>
       <hr />
       <div class="blog-div">
-        <div class="blog-aside-left"></div>
+        <div class="blog-aside-left">
+            <a href="#">Other blogs by the Author</a>
+        </div>
 
         <div class="blog-main">
           <p>
@@ -84,8 +86,12 @@
             asperiores excepturi ducimus eos? Ipsam tempora ratione nemo aut,
             animi ad autem quis cumque ex totam, qui aliquid natus et? Vero
             molestias, impedit voluptatum rerum ipsum animi commodi! Qui earum
-            assumenda suscipit nostrum ducimus, omnis molestias odio
-            consectetur, officiis explicabo nemo! Exercitationem, quae! Nulla
+            assumenda suscipit nostrum ducimus, omnis molestias odio.
+            <figure>
+                <img src="../images/antra-happy-hour.jpg" alt="happyHour">
+                <figcaption>Happy Hour at Antra Inc. <em>Credit: Kizoa</em> </figcaption>
+            </figure>
+            Consectetur, officiis explicabo nemo! Exercitationem, quae! Nulla
             minus ratione, quod cupiditate eveniet veritatis necessitatibus
             velit asperiores temporibus facilis, aspernatur aperiam perferendis.
             Harum autem fuga nemo maxime fugiat totam facilis inventore nam iste
@@ -97,136 +103,20 @@
             Enim adipisci repudiandae consequatur! Voluptatem officiis molestias
             esse, tenetur atque at aperiam similique consequuntur sed minus in
             quidem iure accusamus cumque minima sequi ut eos! Maxime, veritatis
-            corrupti? Minus perspiciatis est sit culpa provident. Rem nostrum
-            facere odio, architecto sit id neque quod tempora unde temporibus
+            corrupti? Minus perspiciatis est sit culpa provident. 
+            Rem nostrum facere odio, architecto sit id neque quod tempora unde temporibus
             cupiditate, voluptates praesentium aut ab iure! Dicta laudantium
             assumenda eaque. Exercitationem consectetur omnis delectus ut
             possimus voluptates iure? Consectetur eum assumenda sit laudantium
             repudiandae impedit dignissimos soluta ullam, totam fugit quia
-            minima, numquam culpa fugiat ratione, provident quasi earum minus ea
-            porro quaerat blanditiis consequuntur nobis facere. Veritatis.
-            Optio, dolorum quidem aspernatur totam accusamus a, aperiam
-            molestiae facilis repellat, perferendis eaque iure cumque minus
-            commodi. Id debitis tenetur modi. Quae velit quisquam pariatur ex
-            alias doloribus fugiat. Aut! Alias dolorem quo dolores aspernatur
-            soluta amet tenetur porro ducimus, qui deleniti ut quasi harum,
-            iusto quos impedit. Aliquam quisquam atque blanditiis vel incidunt
-            in quibusdam tenetur, eum assumenda commodi? Vero deleniti obcaecati
-            itaque eum ab suscipit non harum voluptatem explicabo perspiciatis
-            nostrum error officia, ducimus aut, praesentium voluptate. Inventore
-            ab libero cum dolorum quasi doloremque quam omnis culpa reiciendis.
-            Sequi repudiandae nostrum facere ex, doloremque sunt magnam maxime
-            tenetur minima inventore et praesentium. Sit blanditiis vel vero
-            earum, dolor accusantium, alias cupiditate aut impedit nam
-            repudiandae facere quisquam. Qui! Ratione facere ullam rem numquam
-            ab quibusdam facilis libero dolores dolorum vero quia temporibus
-            necessitatibus vitae, itaque nam voluptatum aliquid nesciunt quas
-            saepe illo laudantium! Dolore blanditiis provident dolorum facilis!
-            Ducimus nam recusandae possimus laborum. Earum, atque nihil
-            blanditiis obcaecati voluptate fuga voluptatem repellendus
-            consequatur aliquid dignissimos, facere vel eaque voluptates. Enim
-            reprehenderit eveniet quae sed, doloribus accusantium quidem
-            temporibus. Nulla quaerat eos est repellendus placeat, rem ipsa ut!
-            Ut eaque neque expedita corrupti quae minus, dolorem beatae
-            architecto distinctio labore? Alias ipsam recusandae assumenda
-            voluptatum quae rem debitis corrupti? Repudiandae, ipsum. Dolorum
-            commodi incidunt rem! Ullam possimus porro nemo. Iste, minus
-            deleniti explicabo quisquam suscipit laudantium odit architecto amet
-            quo? Deserunt maiores voluptas assumenda sunt quae modi itaque
-            eaque. Iste et tempora iure nisi asperiores saepe omnis, dolore eum
-            voluptate voluptates exercitationem similique doloremque quisquam
-            est veritatis ad molestias quam nemo commodi quaerat! Fuga
-            aspernatur reiciendis esse sunt temporibus? Corporis, dignissimos
-            labore maxime reiciendis voluptas deserunt repellat, ad obcaecati
-            libero ullam recusandae cum sapiente adipisci dolorem delectus
-            nostrum non enim ratione provident. Facilis nostrum rerum accusamus
-            ipsum repellat autem. Suscipit voluptatum saepe rem provident
-            explicabo dolore incidunt neque labore maiores officiis perferendis,
-            fugit dolor sapiente impedit a cum ab temporibus dicta? Veritatis
-            voluptates repellendus temporibus a ea voluptate vel! Debitis
-            adipisci consequuntur temporibus, eligendi ipsa exercitationem fuga
-            odio veritatis reiciendis officiis nam. Eaque, voluptates id. Rem,
-            ad eligendi dolore veniam fugiat maxime impedit eveniet, deserunt
-            molestiae pariatur iure molestias. Incidunt dolor ducimus inventore
-            quod maiores velit minus perspiciatis autem similique, reprehenderit
-            praesentium saepe magnam est, dolorem ad? Pariatur beatae similique
-            maiores consectetur unde nam et laborum deserunt reprehenderit
-            commodi? Molestias asperiores odio provident tenetur incidunt fuga
-            aliquid fugit ipsum, tempore vero expedita. Quisquam quae assumenda
-            minus, illum quasi amet illo earum porro, ab accusantium eos ipsa
-            praesentium, ullam asperiores? Id aliquid iste esse odio porro in,
-            officia neque perferendis officiis nam sunt dignissimos sit ipsum
-            nihil possimus quos cum sapiente iure nobis recusandae harum. Unde
-            sequi amet pariatur animi! Ea, blanditiis veritatis. Reiciendis sed
-            quidem deserunt magnam voluptates corrupti, ratione exercitationem
-            temporibus dolorum ea obcaecati soluta maiores odio, animi, earum
-            eius illo perferendis officia aut provident repellat reprehenderit.
-            Ipsum? Quisquam, culpa officia nobis fugiat ullam sint? Recusandae
-            iusto excepturi autem distinctio sit nulla saepe sint possimus nihil
-            rem inventore nemo facere molestias blanditiis tempore dolorem
-            dolor, eius itaque nobis! At natus, nobis quas molestias, ipsam
-            earum asperiores aperiam labore unde iste modi quam doloribus beatae
-            incidunt maiores magnam et similique delectus. Odio quisquam at
-            incidunt assumenda deleniti modi quos. Iste ipsam, facilis numquam
-            debitis eaque aliquid laudantium repellendus optio. Totam quaerat,
-            mollitia doloribus voluptas quisquam facilis a molestiae rem
-            voluptatem saepe aliquid soluta ducimus laboriosam illum culpa.
-            Culpa, voluptas. Ea fugiat soluta, temporibus at repellendus numquam
-            quibusdam molestiae aspernatur ipsam? Nesciunt, voluptatem. Sint
-            tempore quae numquam sed possimus esse ab ad nihil quo aspernatur
-            doloremque, fugit voluptas, reprehenderit officia! Rerum illo libero
-            porro temporibus distinctio, minus impedit animi nemo vel, labore
-            nobis eos aliquam, sint officiis perspiciatis? Suscipit magni
-            pariatur earum modi vero veritatis repellendus ipsa reprehenderit
-            officia saepe! Tempora unde atque quisquam, amet molestiae
-            necessitatibus corrupti magni. Laboriosam ea cum asperiores, quas
-            aperiam facere. Odit repellendus delectus sed ab! Libero, sint illum
-            accusamus iure dolorem totam eos asperiores? Ullam officiis cumque
-            molestiae sed distinctio pariatur, exercitationem vero, in excepturi
-            debitis doloribus quibusdam quo est culpa fuga iure. Omnis, ea.
-            Quae, architecto quibusdam facere nisi obcaecati veritatis deleniti
-            ipsam. Vero atque, rem facere velit odio repellat ipsum minus. Nam
-            est doloribus, possimus dignissimos molestias, amet sunt porro
-            reiciendis ab doloremque incidunt quos ad, vel impedit velit
-            nesciunt asperiores at. Voluptatum provident recusandae eos modi.
-            Impedit sapiente maiores earum commodi dolor ipsa nemo labore quia
-            incidunt, delectus inventore modi quas, sed dolores harum fugit sunt
-            accusantium ut id laboriosam totam! Quo dolorem illum dolores!
-            Laborum, id! Cum exercitationem esse veritatis eligendi consequuntur
-            fugiat, reprehenderit deserunt nesciunt, ad quod eum. Eveniet
-            asperiores ullam laboriosam vel vero similique nostrum accusantium
-            eius error! Et error dignissimos pariatur deserunt eos illum,
-            excepturi sunt? Et in, blanditiis alias, eligendi dolorum
-            reprehenderit, recusandae doloremque debitis quasi sint harum
-            repellat autem illo fugiat commodi nobis iure inventore. Expedita
-            doloremque fugit nobis quisquam blanditiis autem, soluta velit
-            tempore ducimus et necessitatibus? Ad labore ut, sed voluptas vitae
-            aliquid libero nisi reiciendis similique vero repellendus mollitia
-            maxime, odio magni? Sunt maxime modi, quos reprehenderit optio
-            fugiat ratione? Labore aperiam voluptate dolor nemo maxime,
-            voluptatum quia rem commodi obcaecati, iusto eius tenetur sapiente
-            unde ex dolorum temporibus, hic accusantium fugiat? Incidunt ipsam
-            nulla itaque optio quaerat id libero iusto architecto tenetur
-            voluptas. Vero, culpa tempore. Voluptatem corrupti, aliquam porro
-            voluptas natus, asperiores dicta harum rerum adipisci labore
-            sapiente placeat nulla. Perferendis corporis alias, minima
-            recusandae ut deleniti. Perspiciatis ducimus consequuntur
-            accusantium iste itaque. Dolor eaque rem doloribus minus pariatur,
-            quo numquam quisquam, a obcaecati quibusdam ipsa ducimus! Quaerat,
-            libero fuga. Dolores impedit hic voluptas eum ullam vitae dolore,
-            tenetur, quae iste similique, excepturi nemo. Repellendus temporibus
-            at quas explicabo ex exercitationem minima natus recusandae
-            incidunt, error fugit, praesentium consectetur quos. Alias
-            distinctio vero eum fuga modi at exercitationem impedit magni magnam
-            consequuntur voluptate quo facere cum obcaecati ratione officia quam
-            perferendis maxime sint placeat, quasi in qui. Suscipit, fugit in?
-            Perspiciatis, veniam, doloribus in minus omnis quod alias non
-            maiores nemo nesciunt blanditiis assumenda dignissimos. Molestiae,
-            cum suscipit? Itaque error libero doloribus odio fugiat voluptate
-            modi exercitationem debitis animi obcaecati!
+            
           </p>
         </div>
-        <div class="blog-aside-right"></div>
+        <div class="blog-aside-right">
+            <h3>About the Author</h3>
+            <img class="author-avatar" src="../images/author-avatar.png" alt="author-avatar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt repellat rem odio excepturi nisi minima dicta maiores ex quo soluta eum eligendi debitis nostrum accusantium laudantium dolor facilis atque.</p>
+        </div>
         <div class="blog-footer"></div>
       </div>
 
