--- a/David/SecondExam/index.html
+++ b/David/SecondExam/index.html
@@ -14,11 +14,16 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;1,300&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Demo itunes searcher</title>
   </head>
   <body>
     <div class="nav">
+      <span class="fa fa-search"></span>
       <input class="searchBar" type="text" placeholder="Search..." />
     </div>
 
